style.css
:root {
  --bodyBgColor: #000000;
  --bodyTextColor: #ffffff;
  --thCellBgColor: #0c0c09;
  --thCellTextColor: #fff;
  --tdCellOddBgColor: #1a1a1a;
  --tdCellOddTextColor: #fff;
  --tdCellEvenBgColor: #0c0c09;
  --tdCellEvenTextColor: #fff;
  --trHighlightBgColor: #FEED01;
  --trHighlightTextColor: #000;
  --statBgColor: #008000;
  --statTextColor: #ffffff;
  --leaderColor: #42a62a;
  --sprinterColor: #0094e1;
  --climberColor: #ff7800;
  --allrounderColor: #ffba00;
  --abandonedColor: #ff0000;
  --borderRadius: 10px;
}

html {
  font-size: 14px;
}

body {
  background-color: var(--bodyBgColor);
  color: var(--bodyTextColor);
  padding: 10px;
  margin: 0px;
}

div,
input {
  box-sizing: border-box;
}

body,
p,
th,
td,
li {
  font-family: arial, helvetica, sans-serif;
  font-size: 1.2rem;
}

.header {
  text-align: center;
  margin-bottom: 10px;
  ;
}

.logoWrapper {
  margin: 0 auto;
  width: fit-content;
  background: #FEED01;
  border-radius: var(--borderRadius);
  padding: 5px 10px;
  color: #000000;
}

.logoWrapper>div {
  display: flex;
  column-gap: 10px;
}

img.logo {
  width: 80px;
  height: auto;
  align-self: center;
}

.infoWrapper {
  border: 1px solid #fff;
  border-radius: var(--borderRadius);
  padding: 10px;
  margin-bottom: 10px;
}

.hideInfo .infoWrapper {
  display: none;
}

#infoBtn {
  /* width: 50px;
  height: 50px;
  line-height: 50px;
  position: absolute;
  top: 10px;
  right: 10px;
  font-size: 3rem; */
  background-color: #fff;
  color: #000;
  cursor: pointer;
  /* display: inline-block; */
  /* Or use flexbox for centering */
  text-align: center;
  /* For horizontal alignment */
  border-radius: 50%;
  font-family: 'Times New Roman', Times, serif;
  font-style: italic;
  font-weight: bolder;
  width: 34px;
  height: 34px;
  line-height: 34px;
  font-size: 2.5rem;
  flex: 0 0 34px;
}

.iLogo {
  padding: 5px;
  width: 20px;
  height: 20px;
  line-height: 20px;
  display: inline-block;
  text-align: center;
  border-radius: 50%;
  background: #fff;
  color: #000;
  font-family: 'Times New Roman', Times, serif;
  font-style: italic;
  font-weight: bolder;
  font-size: 1.5rem;
}

.infoIcon {
  height: 22px;
  vertical-align: middle;
}

#closeInfo {
  padding: 10px;
  background-color: var(--allrounderColor);
  font-size: 1.3rem;
  font-weight: bold;
  border-radius: var(--borderRadius);
  cursor: pointer;
}

#noRidersSelected {
  display: none;
}

.slotWrapper {
  display: flex;
  column-gap: 10px;
  text-align: center;
  margin-bottom: 10px;
}

.slotWrapper>button {
  flex: 1 1 100%;
  padding: 10px;
  border-radius: var(--borderRadius);
}

.copyDestinationSelectWrapper {
  display: flex;
  justify-content: center;
}

#copySlot img,
#removeRider img {
  max-height: 34px;
  cursor: pointer;
}

#resetStorage {
  /* width: 100%; */
  padding: 10px;
  margin-bottom: 10px;
  border-radius: var(--borderRadius);
  cursor: pointer;
  background: #ff0000;
  color: #fff;
  font-weight: bold;
  border: 2px solid #fff;
}

.slotActive {
  background-color: green;
  color: white;
}

.copyTeamDestination {
  padding: 10px;
  cursor: pointer;
  border: 1px solid black;
  border-radius: var(--borderRadius);
  margin: 0 10px 10px 0;
  text-align: center;
}

.copyTeamDestination.active {
  background-color: var(--statBgColor);
  color: var(--statTextColor);
}

#copyTeamExecute {
  width: 100%;
  padding: 10px;
  background-color: var(--allrounderColor);
  border-radius: var(--borderRadius);
  cursor: pointer;
  margin-bottom: 10px;
  ;
}

#copyTeamExecute:disabled {
  background-color: rgb(197, 197, 197);
  cursor: not-allowed;
}

#copyResultMsg {
  text-align: center;
  padding: 5px;
  border-radius: var(--borderRadius);
}

.costCount,
.roles {
  display: flex;
  align-items: stretch;
  justify-content: space-around;
  column-gap: 10px;
  row-gap: 10px;
  text-align: center;
  margin: 10px 0;
}

.roles {
  flex-flow: row wrap;
}

.costCount>div {
  background: var(--statBgColor);
  color: var(--statTextColor);
  border-radius: var(--borderRadius);
  flex: 1 1 100%;
  border: 2px solid #ffffff;
  padding: 10px 0;
}

.roles>div {
  background: var(--statBgColor);
  color: var(--statTextColor);
  border-radius: var(--borderRadius);
  border: 2px solid #ffffff;
  padding: 10px 0;
  flex: 1 1 calc(50% - 10px);
}

.statsWrapper {
  text-shadow: 1px 1px 1px #000;
}

.statsWrapper .statLeaders {
  background: var(--leaderColor);
}

.statsWrapper .statClimbers {
  background: var(--climberColor);
}

.statsWrapper .statSprinters {
  background: var(--sprinterColor);
}

.statsWrapper .statAllrounders {
  background: var(--allrounderColor);
}

.statsWrapper h4 {
  margin: 0;
  padding: 0;
}

body div .error {
  background: #ff0000;
  color: #ffffff;
}

body div .success {
  background: #008000;
  color: #ffffff;
}

.statsWrapper .errorMessage {
  display: none;
}

.statsWrapper .error .errorMessage {
  display: unset;
}

.filterWrapper {
  margin-bottom: 10px;
  display: flex;
  column-gap: 10px;
}

.infoFlex {
  display: flex;
  column-gap: 10px;
  align-items: center;
}

#abandonInfo {
  display: none;
  padding: 10px;
  background-color: red;
  color: white;
  border-radius: var(--borderRadius);
  margin-bottom: 10px;
  cursor: pointer;
}

.manageAbandons #abandonInfo {
  display: block;
}

.filterWrapper #riderFilterInput {
  padding: 10px;
  border-radius: var(--borderRadius);
  width: 100%;
}

.filter {
  position: relative;
  flex: 1 1 100%;
}

#riderFilterClearBtn {
  position: absolute;
  right: 0.5rem;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
  background-color: transparent;
  background-image: none;
  margin: 0;
  border: 0 none;
}

#riderFilterClearBtn svg {
  width: 1.25rem;
  height: 1.25rem;
}

.sortIndicator {
  font-size: 0.6rem;
}

table {
  border-collapse: collapse;
  border: 1px solid #fff;
}

td {
  padding: 4px;
}

th {
  cursor: pointer;
  padding: 10px 5px;
}

table {
  font-size: 1rem;
  text-align: left;
  border-collapse: collapse;
}

table thead th {
  text-transform: capitalize;
  font-size: 1.5rem;
  background: var(--thCellBgColor);
  color: var(--thCellTextColor);
  cursor: pointer;
}

table tbody tr:nth-child(odd) {
  background: var(--tdCellOddBgColor);
  color: var(--tdCellOddTextColor);
}

table tbody tr:nth-child(even) {
  background: var(--tdCellEvenBgColor);
  color: var(--tdCellEvenTextColor);
}

table tbody td {
  border-top: 1px solid #fff;
}

tr.lib_rouleur .riderRole {
  border-left: 7px solid var(--allrounderColor);
}

tr.lib_grimpeur .riderRole {
  border-left: 7px solid var(--climberColor);
}

tr.lib_baroudeur .riderRole {
  border-left: 7px solid var(--sprinterColor);
}

tr.lib_leader .riderRole {
  border-left: 7px solid var(--leaderColor);
}

tr.abandoned .riderRole {
  border-left: 7px solid var(--abandonedColor);
}

tr.highlight td {
  color: var(--trHighlightTextColor);
  background: var(--trHighlightBgColor);
}

tr.abandoned td,
.infoAbandon {
  text-decoration: line-through;
  color: #f00;
}

td.riderCost,
td.riderBib {
  text-align: right;
}

.tableWrapper {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
  /* flex-direction: row; */
  flex-wrap: wrap;
  column-gap: 10px;
}

.selectedRidersWrapper,
.riderListWrapper {
  flex: 1 1 100%;
}

table#selectedRidersTable {
  display: none;
}

table#riderListTable td,
table#selectedRidersTable td {
  font-size: 1rem;
}

table#selectedRidersTable td {
  padding: 8px 4px;
}

.tableWrapper table {
  width: 100%;
}

.tableHeading {
  margin: 0 0 10px 0;
  padding: 0;
  text-align: center;
}

.team img {
  vertical-align: middle;
  width: 20px;
}





/* ----------- */
/* MODAL STUFF */
/* ----------- */
.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.6);
}

.modal.modalOpen {
  display: initial;
}

.modal-content {
  background-color: #fefefe;
  padding: 20px;
  border: 1px solid #888;
  width: max-content;
  max-width: 90%;
  color: black;
  border-radius: var(--borderRadius);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.modalCloseIcon {
  position: absolute;
  top: 10px;
  right: 10px;
  font-weight: bold;
  text-decoration: none;
  font-size: 28px;
  cursor: pointer;
}

.modalClose {
  cursor: pointer;
}

/* ---------------- */
/* RESPONSIVE STUFF */
/* ---------------- */

@media (min-width: 720px) {

  /* make position stats 4x1 */
  .roles>div {
    flex: 1 1 auto;
  }
}

@media (min-width: 1200px) {
  .tableWrapper {
    flex-flow: row nowrap;
    ;
  }

  .selectedRidersWrapper {
    flex: 1 1 60%;
  }

  .riderListWrapper {
    flex: 1 1 40%;
  }

  table#selectedRidersTable td {
    font-size: 1.1rem;
  }

  table#riderListTable td {
    font-size: 0.8rem;
  }
}

